<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context="com.novoda.downloadmanager.demo.extended.batches.BatchesActivity">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/filter_batches_by_statuses" />

  <RadioGroup
    android:id="@+id/show_batches_query_radio_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkedButton="@+id/show_batches_query_all">

    <RadioButton
      android:id="@+id/show_batches_query_all"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/all" />

    <RadioButton
      android:id="@+id/show_batches_query_successful"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/successful" />

    <RadioButton
      android:id="@+id/show_batches_query_pending"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pending" />

    <RadioButton
      android:id="@+id/show_batches_query_downloading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/downloading" />

    <RadioButton
      android:id="@+id/show_batches_query_deleting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/deleting" />

    <RadioButton
      android:id="@+id/show_batches_query_failed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/failed" />

    <RadioButton
      android:id="@+id/show_batches_query_failed_pending"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/failed_or_pending" />

    <RadioButton
      android:id="@+id/show_batches_query_live"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/live" />
  </RadioGroup>

  <ListView
    android:id="@+id/show_batches_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/show_batches_no_batches_view"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="100"
    android:gravity="center"
    android:textAppearance="?android:textAppearanceMedium"
    android:text="@string/no_batches" />

</LinearLayout>
