<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_vertical"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <Button
    android:id="@+id/pause_resume_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pause_resume_button" />

  <Button
    android:id="@+id/delete_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/delete_button" />

  <Button
    android:id="@+id/batches_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/batches_button" />

</LinearLayout>
