<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:text="@string/extra_data_description" />

  <Button
    android:id="@+id/download_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_single_download_text" />

  <TextView
    android:id="@+id/main_no_downloads_view"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:layout_weight="100"
    android:gravity="center"
    android:text="@string/no_downloads"
    android:textAppearance="?android:textAppearanceMedium" />

  <ListView
    android:id="@+id/main_downloads_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>
