<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete_description"
    android:layout_marginBottom="@dimen/activity_vertical_margin" />

  <Button
    android:id="@+id/single_download_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_download_text" />

  <TextView
    android:id="@+id/main_no_downloads_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textAppearance="?android:textAppearanceMedium"
    android:text="@string/no_downloads" />

  <android.support.v7.widget.RecyclerView
    android:id="@+id/main_downloads_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>
